SERVER-43337 Check that txn writes are successful before attempting to commit an update to shard key