src/mongo/s/commands/cluster_find_and_modify_cmd.cpp
@@ -333,6 +333,7 @@ private:
                     // updateShardKeyValueOnWouldChangeOwningShardError.
                     documentShardKeyUpdateUtil::startTransactionForShardKeyUpdate(opCtx);
                     _runCommand(opCtx, shardId, shardVersion, dbVersion, nss, cmdObj, result);
+                    uassertStatusOK(getStatusFromCommandResult(result->asTempObj()));
                     auto commitResponse =
                         documentShardKeyUpdateUtil::commitShardKeyUpdateTransaction(opCtx);
 
